--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -1,7 +1,8 @@
 <div id="map"></div>
 <div class="ruler">
     <div class="slider">
-        <mat-slider (change)="sliderChanged($event)" id="slider" value="1" min="0.00001" max="1.5" step="0.00001"></mat-slider>
+        <mat-slider (change)="sliderChanged($event)" id="slider_filter" value="1" min="0.00001" max="1.5"
+                    step="0.00001"></mat-slider>
     </div>
     <div class="inputs">
         <span class="">Min&nbsp;</span>
@@ -9,18 +10,9 @@
         <span class="">Max&nbsp;</span>
         <input type="color" id="highColor" value="#000000">
     </div>
-    <div class="item">
-        <span class="minValue"></span>
-        <span class="marker" id="marker-1"></span>
-    </div>
-    <div class="item">
-        <span></span>
-        <span class="marker" id="marker-2"></span>
-    </div>
-    <div class="item">
-        <span class="maxValue"></span>
-        <span class="marker" id="marker-3"></span>
-    </div>
+
+    <span class="minValue"></span>
+    <span class="maxValue"></span>
 
     <!-- для управления количеством цветов -->
     <!--<ul>-->
@@ -30,3 +22,4 @@
     <!--    </li>-->
     <!--</ul>-->
 </div>
+<div id="slider"></div>
