--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -3,6 +3,7 @@
     <div class="slider">
         <mat-slider (change)="sliderChanged($event)" id="slider_filter" value="1" min="0.00001" max="1.5"
                     step="0.00001"></mat-slider>
+        <mat-slide-toggle id="slide_toggle" (change)="changeMade(i, $event)"></mat-slide-toggle>
     </div>
     <div class="inputs">
         <span class="">Min&nbsp;</span>
@@ -10,10 +11,18 @@
         <span class="">Max&nbsp;</span>
         <input type="color" id="highColor" value="#000000">
     </div>
+
     <span class="minValue"></span>
     <span class="maxValue"></span>
-</div>
 
+    <!-- для управления количеством цветов -->
+    <!--<ul>-->
+    <!--    <li id="classesPanel" style="display: block;">-->
+    <!--       <label>Nº classes</label>-->
+    <!--       <input id="classes" type="text" value="5" style="width: 15px">-->
+    <!--    </li>-->
+    <!--</ul>-->
+</div>
 <div id="slider"></div>
 
 <div class="infoTable">
