--- a/snapShots/html.html
+++ b/snapShots/html.html
@@ -1,23 +1,18 @@
 <div class="container">
     <mat-card class="example-card" *ngFor="let snapshot of snapshots">
         <mat-card-header>
-            <!-- скрыть  нижнее-->
-            <mat-card-title>{{snapshot.date }}</mat-card-title>
+            <mat-card-title>{{snapshot.date}}</mat-card-title>
             <mat-card-subtitle *ngFor="let snap of snapshot.snapshots | slice: 0:1">
-                {{snap.ts | date: 'dd.MM.yyyy hh:mm' }}
+                {{snap.ts | date: 'dd.MM.yyyy hh:mm'}}
             </mat-card-subtitle>
         </mat-card-header>
         <div class="layers">
-            <div class="layer" *ngFor="let snap of snapshot.snapshots">
+            <div [ngClass]="{active: snap.active}" class="layer" *ngFor="let snap of snapshot.snapshots">
                 <div class="header">
                     <mat-card-title>{{snap.name}}</mat-card-title>
                 </div>
                 <img src="{{snap.icon}}">
             </div>
         </div>
-        <!--<mat-card-actions>-->
-        <!--    <button mat-button>LIKE</button>-->
-        <!--    <button mat-button>SHARE</button>-->
-        <!--</mat-card-actions>-->
     </mat-card>
 </div>
