leaflet map v2: add export btn

--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -43,4 +43,5 @@
             <input autocomplete="off" matInput value="{{item.value.SZR}}" data-type='SZR'>
         </mat-form-field>
     </mat-card>
+    <button class="export" mat-raised-button color="primary">Экспортировать</button>
 </div>
