--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -20,19 +20,30 @@
 <div id="slider"></div>
 
 <div class="infoTable">
-    <mat-card class="example-card" *ngFor="let item of info; let ind=index" [attr.data-index]="ind">
+    <mat-card data-area='{{item.area}}' class="example-card" *ngFor="let item of info; let ind=index"
+              [attr.data-index]="ind">
         <mat-card-header>
             <div class="colorDiv" style='backgroundColor: {{item.color}}'></div>
-            <span>Площадь зоны: {{item.area}}km</span>
+            <span>Площадь зоны: {{ (item.area/10000).toFixed(1) }}га</span>
         </mat-card-header>
-        <mat-form-field class="example-full-width">
-            <mat-label>Уровень удобрений</mat-label>
-            <input autocomplete="off" matInput value="{{item.value.fertilizer}}" data-type='fertilizer'>
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-            <mat-label>Уровень СЗР</mat-label>
-            <input autocomplete="off" matInput value="{{item.value.SZR}}" data-type='SZR'>
-        </mat-form-field>
+
+        <div class="container">
+            <div class="fields">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Уровень удобрений</mat-label>
+                    <input autocomplete="off" matInput value="{{item.value.fertilizer}}" data-type='fertilizer'>
+                </mat-form-field>
+                <mat-form-field class="example-full-width">
+                    <mat-label>Уровень СЗР</mat-label>
+                    <input autocomplete="off" matInput value="{{item.value.SZR}}" data-type='PPP'>
+                </mat-form-field>
+            </div>
+            <div class="text">
+                <span>Масса удобр.:<span>{{ (item.value.fertilizer * item.area).toFixed() }}</span>кг</span>
+                <span>Масса СЗР:<span>{{ (item.value.SZR * item.area).toFixed() }}</span>кг</span>
+            </div>
+        </div>
+
     </mat-card>
     <button class="export" mat-raised-button color="primary">Экспортировать</button>
 </div>
