leaflet map v2: add notes btn & add for NDVI default colors

--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -46,4 +46,5 @@
 
     </mat-card>
     <button class="export" mat-raised-button color="primary">Экспортировать</button>
+    <button class="notes" mat-raised-button color="primary">Записи</button>
 </div>
