--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -18,8 +18,6 @@
     <span class="minValue"></span>
     <span class="maxValue"></span>
 </div>
-
-
 <div id="slider"></div>
 <div class="infoTable">
     <mat-card data-area='{{item.area}}' class="example-card" *ngFor="let item of info; let ind=index"
@@ -49,4 +47,29 @@
     </mat-card>
     <button class="export" mat-raised-button color="primary">Экспортировать</button>
     <button class="notes" mat-raised-button color="primary">Записи</button>
+
+    <button class="optionally_info_btn" mat-raised-button color="primary">Доп информация</button>
+
+    <div class="modal">
+        <div class="inputs_2">
+            <mat-form-field class="example-full-width">
+                <mat-label>инфра 1</mat-label>
+                <input autocomplete="off" matInput value="" data-type='fertilizer'>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>инфра 2</mat-label>
+                <input autocomplete="off" matInput value="" data-type='PPP'>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>инфра 3</mat-label>
+                <input autocomplete="off" matInput value="" data-type='fertilizer'>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>инфра 4</mat-label>
+                <input autocomplete="off" matInput value="" data-type='PPP'>
+            </mat-form-field>
+        </div>
+        <textarea placeholder="комментарии"></textarea>
+        <button class="submit" mat-raised-button color="primary">Сохранить</button>
+    </div>
 </div>
