leaflet map v2: fix: diidnt show ppp value

--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -35,7 +35,7 @@
                 </mat-form-field>
                 <mat-form-field class="example-full-width">
                     <mat-label>Уровень СЗР</mat-label>
-                    <input autocomplete="off" matInput value="{{item.value.SZR}}" data-type='PPP'>
+                    <input autocomplete="off" matInput value="{{item.value.PPP}}" data-type='PPP'>
                 </mat-form-field>
             </div>
             <div class="text">
@@ -47,9 +47,9 @@
     </mat-card>
     <button class="export" mat-raised-button color="primary">Экспортировать</button>
     <button class="notes" mat-raised-button color="primary">Записи</button>
-
+    
     <button class="optionally_info_btn" mat-raised-button color="primary">Доп информация</button>
-
+    
     <div class="modal">
         <div class="inputs_2">
             <mat-form-field class="example-full-width">
