leaflet map v2: fix: leaflet map v2: fix: diidnt show ppp value p2

--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -40,7 +40,7 @@
             </div>
             <div class="text">
                 <span>Масса удобр.:<span>{{ (item.value.fertilizer * item.area).toFixed() }}</span>кг</span>
-                <span>Масса СЗР:<span>{{ (item.value.SZR * item.area).toFixed() }}</span>кг</span>
+                <span>Масса СЗР:<span>{{ (item.value.PPP * item.area).toFixed() }}</span>кг</span>
             </div>
         </div>
 
