leaflet map v2: add loader after click to tiff img

--- a/leaflet map v2/html.html
+++ b/leaflet map v2/html.html
@@ -60,3 +60,7 @@
         <button class="submit" mat-raised-button color="primary">Сохранить</button>
     </div>
 </div>
+
+<div id="preloader">
+  <div id="loader"></div>
+</div>
